// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`materialButton.js renders component 1`] = `
<button
  className="sc-bwzfXH bNOQGc"
  onClick={[Function]}
  role="button"
>
  Click me
  <div
    aria-hidden="true"
    className="sc-bdVaJa JrgfE"
    color="#1976d2"
    onMouseDown={[Function]}
  />
</button>
`;

exports[`materialButton.js renders component 2`] = `
<button
  className="sc-bwzfXH bWbpjJ"
  onClick={[Function]}
  role="button"
>
  Toggle raised
  <div
    aria-hidden="true"
    className="sc-bdVaJa JrgfE"
    color="#1976d2"
    onMouseDown={[Function]}
  />
</button>
`;
